Services/adguard/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.1.65
    ports:
      - port: 80
