Services/adguard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: external-services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - adguard.dassidias.com
    secretName: adguard-tls
  rules:
  - host: adguard.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-service
            port:
              number: 80
